internal/session/app/tests/snapshots/mcp_schema_snapshot_test__mcp_server_instructions.snap
---
source: internal/session/app/tests/mcp_schema_snapshot_test.rs
expression: "lilo_session_app::mcp::instructions::SERVER_INSTRUCTIONS"
---
session-matters controls local Helioy sessions through lilod.

Use session_run to run a session, session_list to inspect sessions, session_get before acting on one id, and session_delete to terminate a session.

Tools:
- session_run: Start a session through the session daemon and composed runtime service. Supports claude and codex runtimes, headless or tmux targets, docker isolation, image selection, Docker bind mounts, a role, a directory, a namespace, labels, and filesystem agent config resolution. The tool returns the persisted session record.
- agent_run: Deprecated compatibility alias for session_run. Start a session through the session daemon and composed runtime service. Supports claude and codex runtimes, headless or tmux targets, docker isolation, image selection, Docker bind mounts, a role, a directory, a namespace, labels, and filesystem agent config resolution. The tool returns the persisted session record.
- session_list: List session records known to the session-matters daemon. Supports the shared selector grammar.
- agent_list: Deprecated compatibility alias for session_list. List session records known to the session-matters daemon. Supports the shared selector grammar.
- session_get: Get one session record by id. The tool returns an error envelope when the id is unknown.
- agent_get: Deprecated compatibility alias for session_get. Get one session record by id. The tool returns an error envelope when the id is unknown.
- namespace_list: List namespace records known to the session-matters daemon.
- namespace_get: Get one namespace record by slug. The tool returns an error envelope when the slug is unknown.
- session_capture: Capture tmux pane scrollback for one selected session.
- agent_capture: Deprecated compatibility alias for session_capture. Capture tmux pane scrollback for one selected session.
- session_delete: Terminate daemon owned sessions selected by selector. Defaults to SIGTERM with a five second grace period.
- agent_delete: Deprecated compatibility alias for session_delete. Terminate daemon owned sessions selected by selector. Defaults to SIGTERM with a five second grace period.
- session_label: Add or remove one label on sessions selected by selector. Mutations use key=value to set and key- to remove.
- agent_label: Deprecated compatibility alias for session_label. Add or remove one label on sessions selected by selector. Mutations use key=value to set and key- to remove.
- mail_send: Send durable mail to running sessions selected by selector.
- mail_read: Read unread mail for the caller session. Reads mark messages read.
- mail_peek: Peek at the operator message transcript without draining mail.
- mail_check: Return the unread mail count for sessions selected by selector without draining mail.
- mail_stop_check: Return the unread mail count for stop-hook decisions without draining mail.
- mail_tail: Follow the operator message transcript via append events without draining mail.
- nudge: Send an ephemeral nudge to sessions selected by selector. Tmux-backed runtimes deliver through the composed runtime service; headless or ended runtimes return typed failure messages.
- logs: Read the transcript linked to one selected session.
- wait: Wait until a selector satisfies running, terminated, or count=N.
- doctor: Report session-matters daemon health, LOST sessions, and runtime-matters status.

## Selector Grammar

Grammar:
  all
  <uuid-or-prefix>
  id:<uuid>
  role:<name>
  namespace:<slug>
  dir:<path>
  label:<key>=<value>
  label:<key> in (v1, v2)
Examples:
  all
  019e44f9-...
  019e44f
  role:engineer
  namespace:default
  dir:/tmp/project
  label:app=nginx
  "label:app in (web, api)"

## Session Control Workflow

Start `lilo daemon start`; lilod composes session and runtime handling behind one local socket.
Use `session_run` to run a local session through the session-matters daemon.
Use `session_list` to inspect live and terminated sessions.
Use `session_get` before acting on one session id.
Use `session_capture` to read tmux pane scrollback for a tmux backed session.
Use `session_delete` to terminate daemon owned sessions.
Use `session_label` to add or remove labels on selected sessions.
Use `logs` for daemon-spawned headless transcripts.
Use `wait` and `doctor` for lifecycle and runtime-matters diagnostics.
Use `mail_send`, `mail_check`, and `mail_read` for durable session mail.
Use `nudge` for the ephemeral notification surface.
