internal/session/app/tests/snapshots/mcp_schema_snapshot_test__mcp_tool@mail_read.snap
---
source: internal/session/app/tests/mcp_schema_snapshot_test.rs
expression: tool
---
{
  "description": "Read unread mail for the caller session. Reads mark messages read.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {},
    "type": "object"
  },
  "name": "mail_read",
  "outputSchema": {
    "properties": {
      "errors": {
        "items": {
          "type": "object"
        },
        "type": "array"
      },
      "messages": {
        "items": {
          "type": "object"
        },
        "type": "array"
      }
    },
    "required": [
      "messages"
    ],
    "type": "object"
  }
}
